--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root{
   --main-color: #01BAF3;
   --second-color: #f3d901;
-  --dark: #00222D;
+  /*--dark: #00222D;*/
+  --dark: pink;
   --light: #D9F6FF;
   --grey: #717171;
 }
