--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a{
     width: 400px ;
   }
   #about .row:first-child div .pict{
-    background-image: url(Picture/welding.png);
+    background-image: url(Picture/welding.jpg);
     width: 100%;
     height: 100%;
   }
@@ -265,7 +265,7 @@ a{
   }
   #service .container-new .row .col{
     display: inline-block;
-    margin: 5px;
+    margin: 10px 5px;
   }
   #service .container-new .row .col .card{
     width: 250px;
@@ -559,7 +559,7 @@ a{
 
 /* start footer */
   #footer{
-    background-image: url(Picture/background-footer.png);
+    background-image: url(Picture/background-footer.jpg);
     padding-top: 40px;
     padding-bottom: 0;
     background-size: cover;
